Closed
Bug 280936
Opened 21 years ago
Closed 19 years ago
In right-to-left languages, char zwnj (U+200C) is not handled
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8.1
People
(Reporter: khanban, Assigned: smontagu)
References
(Blocks 2 open bugs)
Details
(Keywords: fixed1.8.1, intl)
Attachments
(6 files)
|
531 bytes,
text/html
|
Details | |
|
745 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
7.13 KB,
image/png
|
Details | |
|
18.09 KB,
image/png
|
Details | |
|
6.70 KB,
patch
|
jshin1987
:
review+
rbs
:
superreview+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
|
46.09 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0
In right-to-left languages, the character zwnj (U+200C) is not handled correctly
in the title shown on a tab. It worke well in the main title of the browser, but
not on a tab title. The same problem occures in the RSS entries handling.
Reproducible: Always
Expected Results:
The zwnj (U+200C) should be handled correctly in the tab title and RSS entries,
as it is in the text and browser title.
| Assignee | ||
Comment 1•21 years ago
|
||
Can you provide a testcase or an example URL with U+200C in the <title>?
Yes. Have a look at:
http://www.doc.ic.ac.uk/~khanban/testcase/zwnj-test.html
Comment 3•20 years ago
|
||
This is an automated message, with ID "auto-resolve01".
This bug has had no comments for a long time. Statistically, we have found that
bug reports that have not been confirmed by a second user after three months are
highly unlikely to be the source of a fix to the code.
While your input is very important to us, our resources are limited and so we
are asking for your help in focussing our efforts. If you can still reproduce
this problem in the latest version of the product (see below for how to obtain a
copy) or, for feature requests, if it's not present in the latest version and
you still believe we should implement it, please visit the URL of this bug
(given at the top of this mail) and add a comment to that effect, giving more
reproduction information if you have it.
If it is not a problem any longer, you need take no action. If this bug is not
changed in any way in the next two weeks, it will be automatically resolved.
Thank you for your help in this matter.
The latest beta releases can be obtained from:
Firefox: http://www.mozilla.org/projects/firefox/
Thunderbird: http://www.mozilla.org/products/thunderbird/releases/1.5beta1.html
Seamonkey: http://www.mozilla.org/projects/seamonkey/
As I have metioned above, the problem is with the "TAB title" and the "Main
title" is correct. I checked with Firefox 1.5 beta1 and it has the same bug.
Comment 5•20 years ago
|
||
works for me in Firefox 1.5 beta 2, on Mac OS X 10.2.8. maybe font and.or OS
related ?
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051014
Firefox/1.4.1
It doesn't work in 1.5b2 on Windows.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b5) Gecko/20051016
Firefox/1.4.1
| Assignee | ||
Updated•20 years ago
|
Assignee: bugs → nobody
Status: UNCONFIRMED → NEW
Component: Tabbed Browser → Layout: Fonts and Text
Ever confirmed: true
Product: Firefox → Core
QA Contact: tabbed.browser → layout.fonts-and-text
Version: unspecified → Trunk
| Assignee | ||
Comment 7•20 years ago
|
||
| Assignee | ||
Comment 8•20 years ago
|
||
Assignee: nobody → smontagu
Status: NEW → ASSIGNED
Firefox 1.5.0.3 on Linux works fine. The same version on Windows XP still has this problem.
Comment 10•19 years ago
|
||
I got told that the screenshot I have from Firefox 1.5.0.5 on Windows XP looks good, which is the tab testcase.
Comment 11•19 years ago
|
||
Thanks Pike.
I'm going to do a test on a win machine with Complex Scripts turned on.
Comment 12•19 years ago
|
||
| Assignee | ||
Comment 13•19 years ago
|
||
I've tested this on Windows with complex text support, with and without cairo; and on Linux with gtk and gtk2.
It still needs to get testing on Windows without complex text support; on Linux with pango (even though that isn't officially supported, Persian users need it); and on Mac. When testing it's important to make sure that as well as fixing the testcases, or not regressing them where they work already, it doesn't regress Arabic shaping in both normal and justified text.
Comment 14•19 years ago
|
||
Comment 15•19 years ago
|
||
https://bugzilla.mozilla.org/attachment.cgi?id=232152
Firefox 2.0b1 (cvs) on GTK with enable-pango and WITHOUT the patch. The problem do exist yet. I'm going to build another with smontagu's patch.
Comment 16•19 years ago
|
||
Thanks Simon. Your patch works well in pango enabled build.
Comment 17•19 years ago
|
||
Testing on winXP trunk, patch 231413 reproduces the (AFAICT correct) behaviour from 1.5.0.x, as shown in my previous screenshot.
That's a flat Windows XP, Version 2002, Service Pack 2. The checkboxens in the region and language options, languages tab, for additional language support are both off.
| Assignee | ||
Comment 18•19 years ago
|
||
Comment on attachment 231413 [details] [diff] [review]
patch
Thank you everyone for testing. Time to drive the patch in.
Attachment #231413 -
Flags: superreview?(rbs)
Attachment #231413 -
Flags: review?(jshin1987)
Updated•19 years ago
|
Attachment #231413 -
Flags: review?(jshin1987) → review+
Comment 19•19 years ago
|
||
Comment on attachment 231413 [details] [diff] [review]
patch
sr=rbs
Attachment #231413 -
Flags: superreview?(rbs) → superreview+
| Assignee | ||
Comment 20•19 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 21•19 years ago
|
||
Thanks all. :)
Anyway to get it in branch? Persian translation (bug 300646) would be useless without this fix. :( We have postponed the translation since Fx1.0.
Blocks: 300646
| Assignee | ||
Updated•19 years ago
|
Flags: blocking1.8.1?
Target Milestone: --- → mozilla1.8.1
Updated•19 years ago
|
Attachment #231413 -
Flags: review?(roc)
Updated•19 years ago
|
Attachment #231413 -
Flags: review?(roc)
Comment 22•19 years ago
|
||
Comment on attachment 231413 [details] [diff] [review]
patch
a=schrep for drivers. Adding support for Persian is good stuff.
Attachment #231413 -
Flags: approval1.8.1+
Updated•19 years ago
|
Flags: blocking1.8.1? → blocking1.8.1+
| Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.1
Updated•19 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•