Only strip zero-width joiner and non-joiner control characters when we do our own Arabic shaping. Bug 280936, r=jshin, sr=rbs