intl/unicharutil/util/nsBidiUtils.cpp
@@ -350,7 +350,9 @@ nsresult ArabicShaping(const PRUnichar* aString, PRUint32 aLen,
       }
       if(! done)
         *lDest++ = *lSrc++; 
-    } 
+    } else if (0x200C == *lSrc || 0x200D == *lSrc)
+      // Strip zero-width joining controls ZWJ and ZWNJ from the shaped text
+      lSrc++;
     else 
       *lDest++ = *lSrc++; 
 
